# LangChain_pratice

LCEL/: pyproject.toml
LCEL/LCEL/: .env  RunnableLambda.py
rag/: pyproject.toml
rag/rag/: .env  rag_base.py
