[tool.poetry]
name = "LCEL"
version = "0.1.0"
description = ""
authors = ["WJJblack1224"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
